colour font and styling started

--- a/src/components/styling/RecipeRandom.css
+++ b/src/components/styling/RecipeRandom.css
@@ -1,5 +1,6 @@
 .recipeoftheday {
     height: 50px;
-    width: 5px;
+    /* width: 5px; */
     justify-content: center;
+    align-items: center;
 }
