--- a/src/components/styling/RecipeRandom.css
+++ b/src/components/styling/RecipeRandom.css
@@ -1,6 +1,19 @@
 .recipeoftheday {
-    height: 50px;
+    height: 220px;
     /* width: 5px; */
+    /* /* justify-content: center; */
+    align-items: center; 
+    /* text-align: center; */
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+/* .text-center {
+    height: 200px;
     justify-content: center;
+} */
+
+.cardbody {
     align-items: center;
+    justify-content: center;
 }
