--- a/src/components/styling/RecipeList.css
+++ b/src/components/styling/RecipeList.css
@@ -1,5 +1,18 @@
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 300px !important;
     object-fit: cover;
 }
+
+.cardbody {
+    height: 250px !important;
+}
+
+.card {
+   justify-content: center;
+}
+
+.cardrows {
+    flex-grow: 0 !important;
+}
+/* s */
