--- a/src/components/styling/RecipeRandom.css
+++ b/src/components/styling/RecipeRandom.css
@@ -1,5 +1,5 @@
 .recipeoftheday {
-    height: 220px;
+    height: auto;
     /* width: 5px; */
     /* /* justify-content: center; */
     align-items: center; 
