--- a/src/components/styling/MyRecipes.css
+++ b/src/components/styling/MyRecipes.css
@@ -1,9 +1,10 @@
 .myrecipescard card-img-top {
-    height: 200px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .myrecipescardbody {
-    height: 120px !important;
+    height: auto;
     background-color: #dde1fc;
 }
 
